--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
         applicationId "com.yoshione.fingen"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 103
-        versionName "2.2.3.1"
+        versionCode 105
+        versionName "2.3 beta 2"
         resValue "string", "app_name", "Fingen"
         resValue "string", "inAppLicenseKey", keystoreProperties["inAppLicenseKey"]
         resValue "string", "inAppLicenseSalt", keystoreProperties["inAppLicenseSalt"]
