--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
                 mapsApiKey:keystoreProperties["mapsApiKey"],
                 fabricApiKey:keystoreProperties["fabricApiKey"]
         ]
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -129,4 +130,8 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') { transitive = true }
     implementation('com.github.omadahealth:lollipin:2.1.0@aar') { transitive = true }
     implementation('com.mikepenz:materialdrawer:6.0.7@aar') { transitive = true }
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
 }
