--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,10 @@ android {
             keystoreProperties.containsKey('fabricApiKey') &&
             keystoreProperties.containsKey('storeFile') && keystoreProperties['storeFile'] != "" &&
             keystoreProperties.containsKey('storePassword') &&
+            keystoreProperties.containsKey('oAuthWebClientID') &&
             keystoreProperties.containsKey('keyAlias') &&
             keystoreProperties.containsKey('keyPassword')) {
+        android.defaultConfig.resValue "string", "oAuthWebClientID", keystoreProperties["oAuthWebClientID"]
         android.defaultConfig.resValue "string", "inAppLicenseKey", keystoreProperties["inAppLicenseKey"]
         android.defaultConfig.resValue "string", "inAppLicenseSalt", keystoreProperties["inAppLicenseSalt"]
         android.defaultConfig.manifestPlaceholders = [
@@ -106,9 +108,21 @@ android {
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.txt'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
+def support = '27.1.1'
+def play = '15.0.1'
+def retrofit = '2.4.0'
+def dagger = '2.16'
+def butterKnife = "8.8.1"
+def moxy = "1.5.5"
+
 dependencies {
+    implementation 'com.android.support:support-annotations:27.1.1'
     repositories {
         mavenCentral()
     }
@@ -118,15 +132,16 @@ dependencies {
     implementation(name: 'MaterialShowCase-1.0.5', ext: 'aar')
     implementation(name: 'HeaderDecor-0.2.7', ext: 'aar')
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.airbnb.android:airmapview:1.6.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation "com.android.support:cardview-v7:$supportLibVersion"
-    implementation "com.android.support:design:$supportLibVersion"
-    implementation "com.android.support:preference-v7:$supportLibVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
-    implementation "com.android.support:support-annotations:$supportLibVersion"
-    implementation "com.android.support:support-v13:$supportLibVersion"
+    implementation "com.android.support:cardview-v7:$support"
+    implementation "com.android.support:design:$support"
+    implementation "com.android.support:preference-v7:$support"
+    implementation "com.android.support:recyclerview-v7:$support"
+    implementation "com.android.support:support-annotations:$support"
+    implementation "com.android.support:support-v13:$support"
+//    implementation "com.google.android.gms:play-services-auth:$play"
+//    implementation "com.google.android.gms:play-services-maps:$play"
     implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
     implementation 'com.dropbox.core:dropbox-core-sdk:3.0.6'
     implementation 'com.evernote:android-job:1.2.5'
@@ -135,12 +150,9 @@ dependencies {
     implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     implementation 'com.github.QuadFlask:colorpicker:0.0.13'
-    implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.l4digital.fastscroll:fastscroll:1.0.4'
     implementation 'com.mikepenz:actionitembadge:3.3.2@aar'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'de.psdev.licensesdialog:licensesdialog:1.8.3'
     implementation 'eu.davidea:flipview:1.1.3'
     implementation 'io.requery:sqlite-android:3.20.0'
@@ -158,4 +170,19 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+
+    implementation "com.jakewharton:butterknife:$butterKnife"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnife"
+
+    implementation "com.google.dagger:dagger:$dagger"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger"
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+
+//    implementation "com.arello-mobile:moxy:$moxy"
+//    annotationProcessor "com.arello-mobile:moxy-compiler:$moxy"
 }
