--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_main"
         android:label="@string/app_name"
-        android:resizeableActivity="false"
+        android:resizeableActivity="true"
         android:theme="@style/AppThemeLight"
         tools:node="replace"
         tools:targetApi="n">
