--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -267,8 +267,7 @@
         <activity
             android:name=".fts.ActivityScanQR"
             android:screenOrientation="portrait"
-            android:theme="@style/AppThemeLight"
-            android:noHistory="true"/>
+            android:theme="@style/AppThemeLight"/>
         <activity
             android:name=".fts.ActivityFtsLogin"
             android:screenOrientation="portrait"
