--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ android {
             signingConfig signingConfigs.config
         }
         debug {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //            resValue "string", "app_name", "FG debug"
 //            applicationIdSuffix ".debug"
         }
@@ -147,7 +150,7 @@ dependencies {
     implementation 'net.xpece.android:support-preference:2.1.2'
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.59'
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'ru.tinkoff.decoro:decoro:1.3.4'
     implementation('com.anjlab.android.iab.v3:library:1.0.44') { exclude module: 'support-v4' }
     implementation('com.github.omadahealth:lollipin:2.1.0@aar') { transitive = true }
