Fix load products from new protocol of FNS

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -276,8 +276,7 @@
         <activity
             android:name=".fts.ActivityFtsLogin"
             android:screenOrientation="portrait"
-            android:theme="@style/AppThemeLight"
-            android:noHistory="true"/>
+            android:theme="@style/AppThemeLight"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
