--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
         android.defaultConfig.resValue "string", "oAuthWebClientID", keystoreProperties["oAuthWebClientID"]
         android.defaultConfig.resValue "string", "inAppLicenseKey", keystoreProperties["inAppLicenseKey"]
         android.defaultConfig.resValue "string", "inAppLicenseSalt", keystoreProperties["inAppLicenseSalt"]
+        android.defaultConfig.resValue "string", "dropboxApiKey", keystoreProperties["dropboxApiKey"]
         android.defaultConfig.manifestPlaceholders = [
                 dropboxApiKey: keystoreProperties["dropboxApiKey"],
                 mapsApiKey   : keystoreProperties["mapsApiKey"]
@@ -55,6 +56,7 @@ android {
     } else {
         android.defaultConfig.resValue "string", "inAppLicenseKey", ""
         android.defaultConfig.resValue "string", "inAppLicenseSalt", ""
+        android.defaultConfig.resValue "string", "dropboxApiKey", ""
         android.defaultConfig.manifestPlaceholders = [
                 dropboxApiKey: "",
                 mapsApiKey   : ""
@@ -127,7 +129,7 @@ dependencies {
     implementation 'com.github.gabrielemariotti.changeloglib:changelog:2.1.0'
     implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.5'
-    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
+    implementation 'com.github.QuadFlask:colorpicker:0.0.14'
     implementation 'com.l4digital.fastscroll:fastscroll:1.0.4'
     implementation 'com.mikepenz:actionitembadge:3.3.2@aar'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
